--- a/skincare/templates/footer.html
+++ b/skincare/templates/footer.html
@@ -1,3 +1,3 @@
-<div>
-    <p>&copy; Skincare Products. All Rights Reserved.</p>
+<div class = "footer navbar-fixed-bottom my-footer">
+    <p class = "text-center">&copy; Skincare Products. All Rights Reserved.</p>
 </div>
