--- a/skincare/templates/header.html
+++ b/skincare/templates/header.html
@@ -1,6 +1,8 @@
 {% load static %}
 <header>
     <div style="text-align: center;">
-        <img src="{% static 'images/logo.png' %}" alt="Skincare Products Store">
+        <a href="{% url 'shop:all_products' %}">
+        <img src="{% static 'images/skincare_logo.jpg' %}" alt="Skincare Products Store">
+        </a>    
     </div>
 </header>
