--- a/skincare/templates/skincare/category.html
+++ b/skincare/templates/skincare/category.html
@@ -1,45 +1,71 @@
-{% extends "base.html" %} {% load static %} {% block metadescription %} {% if category %} {{ category.description|truncatewords:155 }} {% else %} Welcome to the skincare products store where you can buy many skincare products. {% endif %} {% endblock%}
-{% block title %} {% if category %} {{ category.name }} - Perfect Skincare Store {% else %} See Our Skincare Products Collection - Perfect Skincare Store {% endif %} {% endblock %} {% block content %}
+{% extends "base.html" %} 
+{% load static %} 
+{% block metadescription %} 
+{% if category %} 
+{{ category.description|truncatewords:155 }} 
+{% else %} 
+Welcome to the skincare products store where you can buy many skincare products. 
+{% endif %} 
+{% endblock%}
+{% block title %} 
+{% if category %} 
+{{ category.name }} - Perfect Skincare Store 
+{% else %} See Our Skincare Products Collection - Perfect Skincare Store 
+{% endif %} 
+{% endblock %} 
+{% block content %}
 <!--Breadcrumb navigation-->
 {% if category %}
-<div>
+<div class="row my_row_class">
     <div>
         <p><a href="{% url 'skincare:all_products' %}">Our Product Collection</a> | {{category.name}}</p>
     </div>
 </div>
 {% endif %}
-<div>
+<div class="mx-auto">
     {% if category %}
-    <img class="" src="{{category.image.url}}" alt="{{category.name}}">
+    <img class="my_image" src="{{category.image.url}}" alt="{{category.name}}">
 </div>
 <br>
 
 <div>
-    <h1>{{category.name}}</h1>
-    <p>{{category.description}}</p>
+    <h1 class="text-center my_title">{{category.name}}</h1>
+    <p class="text-justify">{{category.description}}</p>
 </div>
 {% else %}
-<img class="" src="{% static 'images/skincare_logo.jpg' %}" alt="Our Products Collection">
+<img class="my_image my_image_padding" src="{% static 'images/skincare_logo.jpg' %}" alt="Our Products Collection">
 </div>
 <br>
 <div>
-    <h1>Our Products Collection</h1>
-    <p>Have a look through our collection of skincare products.</p>
+    <h1 class="text-center my_title">Our Products Collection</h1>
+    <p class="text-justify">Have a look through our collection of skincare products.</p>
 </div>
 {% endif %}
-<div>
-    <div>
+<div class="container">
+    <div class="row mx-auto">
         {% for product in prods %}
-        <div>
-            <div>
+        <div class="my_bottom_margin col-9 col-lg-4 col-sm-12 col-md-4">
+            <div class="card text-center" style="min-width:18rem;">
                 <a class="img" href=""><img src="{{product.image.url}}" alt="{{product.name}}"></a>
-                <div>
+                <div class="card-body">
                     <h4>{{product.name}}</h4>
                     <p>€{{product.price}}</p>
                 </div>
             </div>
         </div>
         {% endfor %}
+    </div>
+    <div class="mx-auto">
+        {% if prods.paginator.num_pages > 1 %}
+            <hr>
+            <div class="text-center">
+                {% for pg in prods.paginator.page_range %}
+                    <a href="?page={{pg}}" class="btn btn-light btn-sm {%
+                    if products.number == pg %}active{% endif
+                    %}">{{pg}}</a>
+                {% endfor %}
+            </div>
+        {% endif %}
     </div>
 
     <br>
