--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -2,10 +2,10 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block metadescription %}
-    Sign in and enjoy the variety of stunning and comfy cushions.
+    Sign in and enjoy the variety of different skincare products.
 {% endblock %}
 {% block title %}
-    Login - Perfect Cushion Store
+    Login - Natural Skincare Store
 {% endblock %}
 {% block content %}
     <div class="container">
