--- a/accounts/templates/registration/signup.html
+++ b/accounts/templates/registration/signup.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %} 
 {% block metadescription %} 
 Sign up to get a new account with us. The perfect
-cushion store has a variety of stunning and comfy cushions. 
+skincare store that has a different types of skincare products just for your skin type. 
 {% endblock %} 
 {% block title %} 
 Create a New Account - Natural Skincare Store 
