--- a/skincare/templates/skincare/category.html
+++ b/skincare/templates/skincare/category.html
@@ -11,7 +11,7 @@ Welcome to the skincare store where you can buy different varieties and products
 {% if category %}
 {{ category.name }} - Natural Skincare Store
 {% else %}
-See Our Cushion Collection - Natural Skincare Store
+See Our Skincare Collection - Natural Skincare Store
 {% endif %}
 {% endblock %}
 {% block content %}
