--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -103,7 +103,7 @@
                     </tbody>
                 </table>
                 <div class="mx-auto">
-                    <a href="{% url 'shop:all_products' %}" class="btn btn-secondary btn-block 
+                    <a href="{% url 'skincare:all_products' %}" class="btn btn-secondary btn-block 
                      my_custom_button">Continue 
                     Shopping</a>
                 </div>
